--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <p>提供快捷、安全的 ChatGPT Plus 月/年付充值服务</p>
   <p>无需提供密码，仅需您的注册邮箱</p>
   <br>
-  <a href="https://weixin.qq.com/r/你的微信二维码链接" class="btn">📱 点击联系微信客服</a>
-  <br><br>
+<a href="javascript:void(0);" class="btn" onclick="wechatPopup.style.display='block'">📱 点击联系微信客服</a>
+  <br>
   <p>客服在线时间：每天 9:00 - 23:00</p>
 </body>
 </html>
