--- a/index.html
+++ b/index.html
@@ -2,21 +2,89 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>ChatGPT Plus 代充服务</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChatGPT Plus 代充值服务</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: sans-serif; background: #f9f9f9; text-align: center; padding: 2em; }
-    .btn { background: #2ecc71; color: white; padding: 1em 2em; font-size: 1.2em; text-decoration: none; border-radius: 8px; }
-    .btn:hover { background: #27ae60; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 2em;
+      background: #f9f9f9;
+    }
+    .btn {
+      background: #2ecc71;
+      color: white;
+      padding: 1em 2em;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 1.2em;
+      display: inline-block;
+      margin-top: 20px;
+    }
+    #wechat-float {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      z-index: 9999;
+      cursor: pointer;
+    }
+    #wechat-popup {
+      display: none;
+      position: fixed;
+      bottom: 140px;
+      right: 20px;
+      background: white;
+      padding: 10px;
+      border: 1px solid #ccc;
+      z-index: 10000;
+      text-align: center;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+    }
+    #wechat-popup img {
+      width: 180px;
+      height: 180px;
+    }
+    #wechat-popup p {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #333;
+    }
   </style>
 </head>
 <body>
-  <h1>ChatGPT Plus 代充值服务</h1>
-  <p>提供快捷、安全的 ChatGPT Plus 月/年付充值服务</p>
-  <p>无需提供密码，仅需您的注册邮箱</p>
-  <br>
-<a href="javascript:void(0);" class="btn" onclick="wechatPopup.style.display='block'">📱 点击联系微信客服</a>
-  <br>
-  <p>客服在线时间：每天 9:00 - 23:00</p>
+  <h1>ChatGPT Plus 代充值</h1>
+  <p>安全稳定 / 无需密码 / 快速到账</p>
+  <p>📧 提供邮箱 → 🔄 微信联系 → ✅ 完成充值</p>
+
+  <!-- 主按钮：点击弹出二维码 -->
+  <a href="javascript:void(0);" class="btn" onclick="wechatPopup.style.display='block'">
+    📱 点击联系微信客服
+  </a>
+
+  <!-- 微信悬浮按钮 -->
+  <div id="wechat-float" onclick="wechatPopup.style.display='block'">
+    <img src="wechat-icon.png" width="48" alt="微信客服">
+  </div>
+
+  <!-- 微信二维码弹窗 -->
+  <div id="wechat-popup">
+    <img src="wechat-qr.png" alt="微信二维码">
+    <p>扫一扫添加微信客服</p>
+  </div>
+
+  <script>
+    // 点击页面空白处关闭弹窗
+    window.addEventListener('click', function(event) {
+      const popup = document.getElementById('wechat-popup');
+      const button = document.getElementById('wechat-float');
+      if (!popup.contains(event.target) && !button.contains(event.target)) {
+        popup.style.display = 'none';
+      }
+    });
+  </script>
+
+  <p style="margin-top: 60px; font-size: 0.8em; color: gray;">
+    本站非 OpenAI 官方，仅为信息服务平台。
+  </p>
 </body>
 </html>
