--- a/index.html
+++ b/index.html
@@ -5,50 +5,29 @@
   <title>ChatGPT Plus 代充值</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 2em;
-      background: #f9f9f9;
-    }
+    body { font-family: sans-serif; text-align: center; padding: 2em; background: #f9f9f9; }
     .btn {
-      background: #2ecc71;
-      color: white;
-      padding: 1em 2em;
-      border-radius: 5px;
-      text-decoration: none;
-      font-size: 1.2em;
-      display: inline-block;
-      margin-top: 20px;
+      background: #2ecc71; color: white; padding: 1em 2em; border-radius: 5px;
+      text-decoration: none; font-size: 1.2em; display: inline-block; margin-top: 20px;
     }
     #wechat-popup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 10px;
-      border: 1px solid #ccc;
-      z-index: 10000;
-      text-align: center;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      display: none; position: fixed; top: 50%; left: 50%;
+      transform: translate(-50%, -50%); background: white;
+      padding: 10px; border: 1px solid #ccc; z-index: 10000;
+      text-align: center; box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-    #wechat-popup img {
-      width: 200px;
-      height: 200px;
+    #wechat-popup img { width: 200px; height: 200px; }
+    .qr-section { margin-top: 50px; }
+    .qr-section img { width: 260px; border: 1px solid #ccc; }
+    .form-section { margin-top: 50px; }
+    .record-box {
+      margin: 60px auto 30px; max-width: 360px; padding: 20px;
+      border: 2px solid #2ecc71; border-radius: 10px; background: #f0fff5;
+      text-align: left; font-size: 15px; box-shadow: 0 0 6px rgba(0,0,0,0.05);
     }
-    #wechat-popup p {
-      font-size: 14px;
-      margin-top: 10px;
-    }
-    .qr-section {
-      margin-top: 50px;
-    }
-    .qr-section img {
-      width: 260px;
-      border: 1px solid #ccc;
-    }
+    .record-box h3 { margin-top: 0; margin-bottom: 15px; font-size: 18px; color: #2c3e50; }
+    .record-box ul { list-style: none; padding: 0; margin: 0; }
+    .record-box li { margin: 8px 0; }
   </style>
 </head>
 <body>
@@ -56,34 +35,42 @@
   <h1>ChatGPT Plus 代充值</h1>
   <p>📧 提供邮箱 → 微信联系 → ✅ 完成充值</p>
 
-  <!-- 主按钮 -->
-  <a href="javascript:void(0);" id="wechat-button" class="btn">
-    📱 点击联系微信客服
-  </a>
+  <a href="javascript:void(0);" id="wechat-button" class="btn">📱 点击联系微信客服</a>
 
-  <!-- 弹窗：微信二维码 -->
   <div id="wechat-popup">
     <img src="wechat-qr.png" alt="微信客服二维码">
     <p>扫一扫添加微信客服</p>
   </div>
 
-  <!-- 付款二维码展示 -->
   <div class="qr-section">
     <h3>🎯 请扫码支付 209 元</h3>
     <p style="color: gray;">完成后请通过微信发送您的邮箱地址</p>
     <img src="pay-209.png" alt="微信付款二维码">
   </div>
 
-  <!-- 脚本绑定按钮事件 -->
+  <div class="form-section">
+    <h3>📝 提交充值信息</h3>
+    <iframe src="https://jsj.top/f/v7fXfW" width="100%" height="600" frameborder="0"></iframe>
+  </div>
+
+  <div class="record-box">
+    <h3>📋 最近充值记录</h3>
+    <ul>
+      <li>🕓 2025年11月16日</li>
+      <li>📧 用户邮箱：user@example.com</li>
+      <li>💼 项目：ChatGPT Plus（月付）</li>
+      <li>💰 金额：209 元</li>
+      <li>📦 状态：✅ 已确认</li>
+    </ul>
+  </div>
+
   <script>
     window.onload = function () {
       const popup = document.getElementById('wechat-popup');
       const button = document.getElementById('wechat-button');
-
       button.addEventListener('click', function () {
         popup.style.display = 'block';
       });
-
       window.addEventListener('click', function (event) {
         if (!popup.contains(event.target) && event.target !== button) {
           popup.style.display = 'none';
