--- a/index.html
+++ b/index.html
@@ -1,86 +1,42 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>ChatGPT Plus 代充值</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ChatGPT Plus 代充</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 2em; background: #f9f9f9; }
-    .btn {
-      background: #2ecc71; color: white; padding: 1em 2em; border-radius: 5px;
-      text-decoration: none; font-size: 1.2em; display: inline-block; margin-top: 20px;
-    }
-    #wechat-popup {
-      display: none; position: fixed; top: 50%; left: 50%;
-      transform: translate(-50%, -50%); background: white;
-      padding: 10px; border: 1px solid #ccc; z-index: 10000;
-      text-align: center; box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    #wechat-popup img { width: 200px; height: 200px; }
-    .qr-section { margin-top: 50px; }
-    .qr-section img { width: 260px; border: 1px solid #ccc; }
-    .form-section { margin-top: 50px; }
-    .record-box {
-      margin: 60px auto 30px; max-width: 360px; padding: 20px;
-      border: 2px solid #2ecc71; border-radius: 10px; background: #f0fff5;
-      text-align: left; font-size: 15px; box-shadow: 0 0 6px rgba(0,0,0,0.05);
-    }
-    .record-box h3 { margin-top: 0; margin-bottom: 15px; font-size: 18px; color: #2c3e50; }
-    .record-box ul { list-style: none; padding: 0; margin: 0; }
-    .record-box li { margin: 8px 0; }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 20px; }
+    .container { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 8px; }
+    h1 { color: #333; }
+    .qr-section { display: flex; gap: 20px; margin-bottom: 30px; }
+    .qr-box { text-align: center; flex: 1; }
+    .qr-box img { width: 200px; border: 1px solid #ccc; padding: 5px; background: #fff; }
+    iframe { border: 1px solid #ccc; width: 100%; height: 500px; border-radius: 8px; }
+    .record-title { font-size: 1.2em; margin-bottom: 10px; color: #444; }
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>ChatGPT Plus 会员代充平台</h1>
+    <div class="qr-section">
+      <div class="qr-box">
+        <p><strong>联系客服</strong></p>
+        <img src="wechat-qr.png" alt="微信客服二维码">
+      </div>
+      <div class="qr-box">
+        <p><strong>支付 ¥209</strong></p>
+        <img src="pay-209.PNG" alt="付款二维码">
+      </div>
+    </div>
 
-  <h1>ChatGPT Plus 代充值</h1>
-  <p>📧 提供邮箱 → 微信联系 → ✅ 完成充值</p>
+    <div class="form-box">
+      <p class="record-title">请填写充值登记表单（付款后务必填写）：</p>
+      <iframe src="https://baserow.io/form/Ev91QBP7d4j23KqT8iwluVXhUQQCqo5ByENturu23T8" frameborder="0"></iframe>
+    </div>
 
-  <a href="javascript:void(0);" id="wechat-button" class="btn">📱 点击联系微信客服</a>
-
-  <div id="wechat-popup">
-    <img src="wechat-qr.png" alt="微信客服二维码">
-    <p>扫一扫添加微信客服</p>
+    <div class="record-section" style="margin-top: 40px;">
+      <p class="record-title">充值记录展示：</p>
+      <iframe src="record.html" frameborder="0" height="600"></iframe>
+    </div>
   </div>
-
-  <div class="qr-section">
-    <h3>🎯 请扫码支付 209 元</h3>
-    <p style="color: gray;">完成后请通过微信发送您的邮箱地址</p>
-    <img src="pay-209.png" alt="微信付款二维码">
-  </div>
-
-  <div class="form-section">
-    <h3>📝 提交充值信息</h3>
-    <iframe src="https://jsj.top/f/v7fXfW" width="100%" height="600" frameborder="0"></iframe>
-  </div>
-
-  <div class="record-box">
-    <h3>📋 最近充值记录</h3>
-    <ul>
-      <li>🕓 2025年11月16日</li>
-      <li>📧 用户邮箱：user@example.com</li>
-      <li>💼 项目：ChatGPT Plus（月付）</li>
-      <li>💰 金额：209 元</li>
-      <li>📦 状态：✅ 已确认</li>
-    </ul>
-  </div>
-
-  <script>
-    window.onload = function () {
-      const popup = document.getElementById('wechat-popup');
-      const button = document.getElementById('wechat-button');
-      button.addEventListener('click', function () {
-        popup.style.display = 'block';
-      });
-      window.addEventListener('click', function (event) {
-        if (!popup.contains(event.target) && event.target !== button) {
-          popup.style.display = 'none';
-        }
-      });
-    };
-  </script>
-
-  <p style="margin-top: 60px; font-size: 0.8em; color: gray;">
-    本站非 OpenAI 官方，仅为信息服务平台。
-  </p>
 </body>
 </html>
