--- a/record.html
+++ b/record.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>充值记录 | ChatGPT Plus 代充</title>
+  <title>充值记录展示</title>
   <style>
-    body { font-family: sans-serif; background: #f9f9f9; padding: 2em; text-align: center; }
-    h1 { color: #2c3e50; }
-    .record-box {
-      margin: 40px auto; max-width: 400px; text-align: left;
-      padding: 20px; border: 1px solid #ccc; background: white;
-      border-radius: 10px; box-shadow: 0 0 6px rgba(0,0,0,0.05);
-    }
-    ul { list-style: none; padding-left: 0; }
-    li { margin: 8px 0; }
+    body { margin: 0; padding: 0; }
+    iframe { width: 100vw; height: 100vh; border: none; }
   </style>
 </head>
 <body>
-  <h1>📋 历史充值记录</h1>
-  <div class="record-box">
-    <ul>
-      <li>🕓 2025年11月16日</li>
-      <li>📧 邮箱：user@example.com</li>
-      <li>💼 项目：ChatGPT Plus（月付）</li>
-      <li>💰 金额：209 元</li>
-      <li>📦 状态：✅ 已完成</li>
-    </ul>
-  </div>
+  <!-- 请将 src 替换为你在 Baserow 中的共享表格链接 -->
+  <iframe src="https://baserow.io/form/Ev91QBP7d4j23KqT8iwluVXhUQQCqo5ByENturu23T8"></iframe>
 </body>
 </html>
