--- a/record.html
+++ b/record.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <!-- 请将 src 替换为你在 Baserow 中的共享表格链接 -->
-  <iframe src="https://baserow.io/form/Ev91QBP7d4j23KqT8iwluVXhUQQCqo5ByENturu23T8"></iframe>
+  <iframe src="https://baserow.io/public/grid/nX18wFKDt0KB_PpVF7fbNhrAYH4hLr9Rjv7YgQkLp8s" width="100%" height="600" frameborder="0"></iframe>
 </body>
 </html>
