--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="record-section" style="margin-top: 40px;">
       <p class="record-title">充值记录展示：</p>
-      <iframe src="record.html" frameborder="0" height="600"></iframe>
+      <iframe src="https://baserow.io/public/grid/nX18wFKDt0KB_PpVF7fbNhrAYH4hLr9Rjv7YgQkLp8s" frameborder="0" height="600"></iframe>
     </div>
   </div>
 </body>
